@@ -2,74 +2,81 @@ package com.arturjarosz.task.contractor.application.impl;
 
 import com.arturjarosz.task.contractor.application.ContractorApplicationService;
 import com.arturjarosz.task.contractor.application.ContractorValidator;
-import com.arturjarosz.task.contractor.application.dto.ContractorDto;
 import com.arturjarosz.task.contractor.application.mapper.ContractorDtoMapper;
 import com.arturjarosz.task.contractor.infrastructure.ContractorRepository;
-import com.arturjarosz.task.contractor.model.Contractor;
+import com.arturjarosz.task.contractor.model.ContractorCategory;
+import com.arturjarosz.task.dto.ContractorDto;
 import com.arturjarosz.task.sharedkernel.annotations.ApplicationService;
-import com.arturjarosz.task.sharedkernel.model.CreatedEntityDto;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.arturjarosz.task.sharedkernel.exceptions.ResourceNotFoundException;
+import lombok.NonNull;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
+@RequiredArgsConstructor
 @ApplicationService
 public class ContractorApplicationServiceImpl implements ContractorApplicationService {
-    private static final Logger LOG = LoggerFactory.getLogger(ContractorApplicationServiceImpl.class);
 
+    @NonNull
     private final ContractorRepository contractorRepository;
+    @NonNull
     private final ContractorValidator contractorValidator;
 
-    @Autowired
-    public ContractorApplicationServiceImpl(ContractorRepository contractorRepository,
-                                            ContractorValidator contractorValidator) {
-        this.contractorRepository = contractorRepository;
-        this.contractorValidator = contractorValidator;
-    }
 
     @Transactional
     @Override
-    public CreatedEntityDto createContractor(ContractorDto contractorDto) {
+    public ContractorDto createContractor(ContractorDto contractorDto) {
         LOG.debug("Creating Contractor.");
+
         this.contractorValidator.validateCreateContractorDto(contractorDto);
-        Contractor contractor = ContractorDtoMapper.INSTANCE.createContractorDtoToContractor(contractorDto);
+        var contractor = ContractorDtoMapper.INSTANCE.createContractorDtoToContractor(contractorDto);
         this.contractorRepository.save(contractor);
+
         LOG.debug("Contractor created.");
-        return new CreatedEntityDto(contractor.getId());
+        return ContractorDtoMapper.INSTANCE.contractorToContractorDto(contractor);
     }
 
     @Transactional
     @Override
-    public void updateContractor(Long contractorId, ContractorDto contractorDto) {
+    public ContractorDto updateContractor(Long contractorId, ContractorDto contractorDto) {
         LOG.debug("Updating Contractor with id {}", contractorId);
-        this.contractorValidator.validateContractorExistence(contractorId);
+
+        var maybeContractor = this.contractorRepository.findById(contractorId);
+        this.contractorValidator.validateContractorExistence(maybeContractor, contractorId);
         this.contractorValidator.validateUpdateContractorDto(contractorDto);
-        Contractor contractor = this.contractorRepository.load(contractorId);
-        contractor.update(contractorDto.getName(), contractorDto.getCategory(),
-                contractorDto.getEmail(), contractorDto.getTelephone(), contractorDto.getNote());
+        var contractor = maybeContractor.orElseThrow(ResourceNotFoundException::new);
+        contractor.update(contractorDto.getName(), ContractorCategory.valueOf(contractorDto.getCategory().name()), contractorDto.getEmail(),
+                contractorDto.getTelephone(), contractorDto.getNote());
         this.contractorRepository.save(contractor);
+
         LOG.debug("Contractor with id {} updated", contractorId);
+        return ContractorDtoMapper.INSTANCE.contractorToContractorDto(contractor);
     }
 
     @Transactional
     @Override
     public void deleteContractor(Long contractorId) {
         LOG.debug("Deleting Contractor with id {}", contractorId);
+
         this.contractorValidator.validateContractorExistence(contractorId);
         this.contractorValidator.validateContractorHasNoJobs(contractorId);
-        this.contractorRepository.remove(contractorId);
+        this.contractorRepository.deleteById(contractorId);
+
         LOG.debug("Contractor with id {} deleted.", contractorId);
     }
 
     @Override
     public ContractorDto getContractor(Long contractorId) {
         LOG.debug("Loading Contractor with id {}.", contractorId);
-        this.contractorValidator.validateContractorExistence(contractorId);
-        Contractor contractor = this.contractorRepository.load(contractorId);
-        ContractorDto contractorDto = ContractorDtoMapper.INSTANCE.contractorToContractorDto(contractor);
+
+        var maybeContractor = this.contractorRepository.findById(contractorId);
+        this.contractorValidator.validateContractorExistence(maybeContractor, contractorId);
+        var contractorDto = ContractorDtoMapper.INSTANCE.contractorToContractorDto(
+                maybeContractor.orElseThrow(ResourceNotFoundException::new));
+
         LOG.debug("Contractor with id {} loaded", contractorId);
         return contractorDto;
     }
@@ -77,7 +84,7 @@ public class ContractorApplicationServiceImpl implements ContractorApplicationSe
     @Override
     public List<ContractorDto> getBasicContractors() {
         LOG.debug("Loading Contractors list");
-        return this.contractorRepository.loadAll().stream()
-                .map(ContractorDtoMapper.INSTANCE::contractorToBasicContractor).collect(Collectors.toList());
+        return this.contractorRepository.findAll().stream()
+                .map(ContractorDtoMapper.INSTANCE::contractorToBasicContractor).toList();
     }
 }
